# ansible-role-tripleo-heat-stack

./: README.md  requirements.txt  setup.cfg
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: main.yml
tests/: test-stack.yaml  test.yml
vars/: main.yml
