[metadata]
name = ansible-role-tripleo-heat-stack
summary = ansible-role-tripleo-heat-stack - A ansible role for managing heat stack over tripleo
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-heat-stack
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-heat-stack/defaults = ../ansible-role-tripleo-heat-stack/defaults/*
    usr/local/share/ansible-role-tripleo-heat-stack/handlers = ../ansible-role-tripleo-heat-stack/handlers/*
    usr/local/share/ansible-role-tripleo-heat-stack/meta = ../ansible-role-tripleo-heat-stack/meta/*
    usr/local/share/ansible-role-tripleo-heat-stack/tasks = ../ansible-role-tripleo-heat-stack/tasks/*
    usr/local/share/ansible-role-tripleo-heat-stack/templates = ../ansible-role-tripleo-heat-stack/templates/*
    usr/local/share/ansible-role-tripleo-heat-stack/tests = ../ansible-role-tripleo-heat-stack/tests/*
    usr/local/share/ansible-role-tripleo-heat-stack/vars = ../ansible-role-tripleo-heat-stack/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
